unpackaged/main/default/objects/pse__fflib_XXXBatchTestOpportunity2__c/fields/pse__Account__c.field-meta.xml
<CustomField>
    <fullName>pse__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XXX Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>XXX Batch Test Opportunity 2s</relationshipLabel>
    <relationshipName>XXX_Batch_Test_Opportunity_2s</relationshipName>
    <type>Lookup</type>
</CustomField>