unpackaged/main/default/objects/pse__fflib_XXXBatchTestOpportunity2__c/fields/pse__BatchProcess__c.field-meta.xml
<CustomField>
    <fullName>pse__BatchProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NOT TO PACKAGE. Only for unit test</description>
    <label>XXX Batch Process</label>
    <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>Batch Test Opportunity 2s</relationshipLabel>
    <relationshipName>BatchTestOpportunity2s</relationshipName>
    <type>Lookup</type>
</CustomField>