unpackaged/main/default/objects/pse__fflib_XXXBatchTestOpportunity2__c/fields/pse__NextStep__c.field-meta.xml
<CustomField>
    <fullName>pse__NextStep__c</fullName>
    <label>XXX Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>